modify the ci script

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -17,18 +17,14 @@ jobs:
           POSTGRES_DB: rails_test
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
-      elasticsearch:
-        image: elasticsearch:6.8.3
-        ports:
-          - 9200/tcp
-        options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     env:
       RAILS_ENV: test
       DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
-      ELASTICSEARCH_URL: "http://localhost:9200"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: bundle lock
+        run: bundle lock --add-platform x86_64-linux
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
