--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: bundle lock
-        run: bin/bundle lock --add-platform x86_64-linux
+      - name: Make bin/bundle executable
+        run: chmod +x bin/bundle
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
@@ -34,4 +34,4 @@ jobs:
       - name: Set up database schema
         run: bin/rails db:migrate
       - name: Run RSpec tests
-        run: bundle exec rspec
+        run: bin/rspec
