--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -8,18 +8,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:11-alpine
-        ports:
-          - "5432:5432"
-        env:
-          POSTGRES_DB: rails_test
-          POSTGRES_USER: rails
-          POSTGRES_PASSWORD: password
     env:
       RAILS_ENV: test
-      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,7 +20,7 @@ jobs:
         with:
           bundler-cache: true
       - name: Install dependencies
-        run: bin/bundle install --jobs 4 --retry 3
+        run: bundle install --jobs 4 --retry 3
       - name: Set up database schema
         run: bundle exec rails db:migrate
       - name: Run RSpec tests
