use mongo in github actions

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     env:
       RAILS_ENV: test
+      MONGODB_VERSION: '4.4'
+      MONGODB_URL: 'mongodb://127.0.0.1:27017/raw_data'
+    services:
+      mongodb:
+        image: 'mongo:${{ env.MONGODB_VERSION }}'
+        ports:
+          - 27017:27017
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
