--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,6 @@
 /log
 vendor
 .keep
-/config/credentials/production.key
+#/config/credentials/production.key
 
 /config/credentials/development.key
