--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,18 @@
 version: '3.8'
 
 services:
-  app:
+  my-rails-app:
     build:
-      context: .
+      context: mcmuralishclint/my-rails-app:latest
       args:
         RUBY_VERSION: 3.2.2
     ports:
       - "3000:3000"
-    environment:
-      RAILS_LOG_TO_STDOUT: "1"
-      RAILS_ENV: "development"
-      BUNDLE_WITHOUT: "development"
     volumes:
       - .:/rails
     depends_on:
       - mongo
-    entrypoint: /rails/bin/docker-entrypoint
-
   mongo:
     image: mongo
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
