--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: '3.3'
+version: '3.8'
 
 services:
   my-rails-app:
+    image: mcmuralishclint/my-rails-app:latest
     ports:
       - "3000:3000"
     volumes:
       - .:/rails
+    environment:
+      RAILS_ENV: development
+      RAILS_HOST: 0.0.0.0
     depends_on:
       - mongo
-    image: mcmuralishclint/my-rails-app:latest
   mongo:
     image: mongo
     ports:
